--- a/aplicacionGps/src/main/webapp/indexPrincipal/login/Login_v4/css/main.css
+++ b/aplicacionGps/src/main/webapp/indexPrincipal/login/Login_v4/css/main.css
@@ -345,7 +345,7 @@ iframe {
   width: 300%;
   height: 100%;
   background: #a64bf4;
-  background: -webkit-linear-gradient(right, #00dbde, #fc00ff, #00dbde, #fc00ff);
+  background: -webkit-linear-gradient(right, #0044de, #ff8100, #9700de, #ff0000);
   background: -o-linear-gradient(right, #00dbde, #fc00ff, #00dbde, #fc00ff);
   background: -moz-linear-gradient(right, #00dbde, #fc00ff, #00dbde, #fc00ff);
   background: linear-gradient(right, #00dbde, #fc00ff, #00dbde, #fc00ff);
