--- a/aplicacionGps/src/main/webapp/cssIndex/estilosbox.css
+++ b/aplicacionGps/src/main/webapp/cssIndex/estilosbox.css
@@ -8,11 +8,12 @@ html, body{
 
 body{
     width: 100%;
-    height: 100%;
+    height: 780px;
     font-family: sans-serif;
     letter-spacing: 0.03em;
     line-height: 1.6;
     font-family: 'Open Sans', sans-serif;
+
 }
 
 .title{
@@ -23,16 +24,16 @@ body{
     font-weight: 100;
     font-family: 'Roboto', sans-serif;
 }
+.caja1{
 
-
-.container{
-    width: 100%;
-    max-width: 1200px;
-    height: 430px;
+	        padding-top:50px;
+	            margin: 0px 0px 0px 0;
+	                width: 100%;
+    align-items: center;
+    height: 700px;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    margin: auto;
 }
 
 .container .card{
